# ninja2

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  config.yaml  configure.py  install.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cloudbuild-ci.yml  linux-ci.yml  linux.yml  localbuild-test.yml  macos.yml  remote_apis_test.yml  sharebuild-test.yml  test_install_sh.yml  windows.yml
doc/: manual.asciidoc  openharmony.md
doc/openharmony/: .cloudbuild.yml  .ninja2.conf  README.md
src/: build.cc  build.h  build_log.cc  build_test.cc  disk_interface.cc  disk_interface.h  graph.h  manifest_parser.cc  manifest_parser.h  manifest_parser_test.cc  missing_deps_test.cc  ninja.cc  rbe_config.cc  rbe_config.h  remote_process.cc  remote_process.h  state.cc  state.h  state_test.cc  subprocess.h  thread_pool.cc  thread_pool.h  util.cc  util.h  version.cc
src/cloud/: CMakeLists.txt  config.cc  ninjaRegisterService.cc  share_thread.h
src/cloud/protos/: CMakeLists.txt  ninjaRegister.proto  ninjaUnregister.proto
src/remote_executor/: CMakeLists.txt  cas_client.cc  cas_client.h  compile_command_parser.cc  compile_command_parser.h  execution_context.cc  execution_context.h  grpc_client.cc  grpc_client.h  remote_apis_test.cc  remote_execution_client.cc  remote_execution_client.h  remote_spawn.cc  remote_spawn.h  static_file_utils.cc  static_file_utils.h
src/remote_executor/protos/: CMakeLists.txt
src/remote_executor/protos/google/bytestream/: bytestream.proto
src/share_build/: config.h  execute1Service.cc  execute1Service.h  ninjaRegisterService.cc  ninjaRegisterService.h  ninjaUnregisterService.cc  ninjaUnregisterService.h  proxy_service_client.cc  proxy_service_client.h  share_thread.cc  share_thread.h  share_worker.h  sharebuild.cc  sharebuild.h
src/share_build/protos/: CMakeLists.txt  common.proto  execute1.proto  ninjaRegister.proto  proxy.proto
